<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="@dimen/help_dialog_height">

    <ImageButton
        android:contentDescription="@string/dismiss_dialog_content_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/help_dialog_close_button_height"
        android:id="@+id/helpDismissButton"
        android:src="@drawable/fab_icon"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/action_help"
        android:id="@+id/helpTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/help_dialog_title_padding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/help_dialog_border_height"
        android:background="@color/helpDialogBorder"
        android:layout_below="@+id/helpTitle"
        android:layout_alignParentStart="true"
        android:id="@+id/border" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/helpTitle"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/helpDismissButton"
        android:layout_alignParentEnd="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_description"
            android:id="@+id/textView16"
            android:padding="@dimen/help_dialog_text_padding" />
    </ScrollView>


</RelativeLayout>