<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/list_row_padding"
    android:id="@+id/listItem">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/placeholder_found_word"
        android:id="@+id/foundWord"
        android:textAllCaps="true"
        android:padding="@dimen/list_row_widget_padding"
        android:textColor="@color/listRowText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_toEndOf="@+id/checkBox"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:src="@drawable/search_icon_transparent"
        android:background="@android:color/transparent"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/foundWord" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeholder_score"
        android:id="@+id/wordScore"
        android:textColor="@color/listRowTextSecondary"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/space"
        android:layout_toStartOf="@+id/space"
        android:paddingTop="@dimen/list_row_widget_padding"
        android:paddingBottom="@dimen/list_row_widget_padding"
        android:paddingLeft="@dimen/list_row_widget_padding"
        android:paddingRight="16dp"
        android:layout_alignBottom="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score_description"
        android:id="@+id/wordScoreDescription"
        android:padding="@dimen/list_row_widget_padding"
        android:textColor="@color/listRowTextSecondary"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/wordScore"
        android:layout_toStartOf="@+id/wordScore"
        android:layout_alignBottom="@+id/wordScore" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/searchButton"
        android:layout_alignBottom="@+id/searchButton"
        android:layout_toLeftOf="@+id/searchButton"
        android:background="@color/listRowTextSecondary"
        android:id="@+id/space" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:checked="false"
        android:buttonTint="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/foundWord" />

</RelativeLayout>
